# starpy

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: contributing.md  index.md
docs/css/: custom.css  termynal.css
docs/js/: custom.js
docs/templates/: installation.md
docs/tutorial/: apod.md  index.md
skyport/: cli.py
starpy/: cli.py
tests/: test_apod.py  test_base.py  test_xpto.py
